feat: add option to include unreleased extensions
